updates to website

--- a/assets/bibliography/2018-12-22-distill.bib
+++ b/assets/bibliography/2018-12-22-distill.bib
@@ -1,7 +1,110 @@
-@article{gregor2015draw,
-  title={DRAW: A recurrent neural network for image generation},
-  author={Gregor, Karol and Danihelka, Ivo and Graves, Alex and Rezende, Danilo Jimenez and Wierstra, Daan},
-  journal={arXiv preprint, arXiv:1502.04623},
-  year={2015},
-  url={https://arxiv.org/pdf/1502.04623.pdf}
+@article{edwards2020delay,
+  title={Delay induced swarm pattern bifurcations in mixed reality experiments},
+  author={Edwards, Victoria and deZonia, Philip and Hsieh, M Ani and Hindes, Jason and Triandaf, Ioana and Schwartz, Ira B},
+  journal={Chaos: An Interdisciplinary Journal of Nonlinear Science},
+  volume={30},
+  number={7},
+  pages={073126},
+  year={2020},
+  publisher={AIP Publishing LLC}
+}
+
+@article{hindes2020unstable,
+  title={Unstable modes and bistability in delay-coupled swarms},
+  author={Hindes, Jason and Edwards, Victoria and Kamimoto, Sayomi and Triandaf, Ioana and Schwartz, Ira B},
+  journal={Physical Review E},
+  volume={101},
+  number={4},
+  pages={042202},
+  year={2020},
+  publisher={APS}
+}
+
+@article{hindes2020stability,
+  title={Stability of milling patterns in self-propelled swarms on surfaces},
+  author={Hindes, Jason and Edwards, Victoria and Kamimoto, Sayomi and Stantchev, George and Schwartz, Ira B},
+  journal={Physical Review E},
+  volume={102},
+  number={2},
+  pages={022212},
+  year={2020},
+  publisher={APS}
+}
+
+@inproceedings{edwards2018calibrating,
+  title={Calibrating mixed reality for scalable multi-robot experiments},
+  author={Edwards, Victoria and Gaskell, Peter and Olson, Edwin},
+  booktitle={Proceedings of the 17th International Conference on Autonomous Agents and MultiAgent Systems},
+  pages={2183--2185},
+  year={2018}
+}
+
+@inproceedings{edwards2016segregation,
+  title={Segregation of heterogeneous robotics swarms via convex optimization},
+  author={Edwards, Victoria and Rezeck, Paulo and Chaimowicz, Luiz and Hsieh, M Ani},
+  booktitle={Dynamic Systems and Control Conference},
+  volume={50695},
+  pages={V001T03A001},
+  year={2016},
+  organization={American Society of Mechanical Engineers}
+}
+
+@article{hindes2021swarm,
+  title={Swarm shedding in networks of self-propelled agents},
+  author={Hindes, Jason and Edwards, Victoria and Kasraie, Klimka Szwaykowska and Stantchev, George and Schwartz, Ira B},
+  journal={Scientific Reports},
+  volume={11},
+  number={1},
+  pages={1--9},
+  year={2021},
+  publisher={Nature Publishing Group}
+}
+
+@article{schwartz2021interacting,
+  title={Interacting Swarm Sensing and Stabilization},
+  author={Schwartz, Ira B and Edwards, Victoria and Hindes, Jason},
+  journal={arXiv preprint arXiv:2106.01824},
+  year={2021}
+}
+
+@article{edwards2020establishing,
+  title={Establishing Reliable Robot Behavior using Capability Analysis Tables},
+  author={Edwards, Victoria and McGuire, Loy and Redfield, Signe},
+  journal={arXiv preprint arXiv:2007.11739},
+  year={2020}
+}
+
+@article{schwartz2020torus,
+  title={Torus bifurcations of large-scale swarms having range dependent communication delay},
+  author={Schwartz, Ira B and Edwards, Victoria and Kamimoto, Sayomi and Kasraie, Klimka and Ani Hsieh, M and Triandaf, Ioana and Hindes, Jason},
+  journal={Chaos: An Interdisciplinary Journal of Nonlinear Science},
+  volume={30},
+  number={5},
+  pages={051106},
+  year={2020},
+  publisher={AIP Publishing LLC}
+}
+
+@article{salam2022learning,
+  title={Learning and Leveraging Features in Flow-Like Environments to Improve Situational Awareness},
+  author={Salam, Tahiya and Edwards, Victoria and Hsieh, M Ani},
+  journal={IEEE Robotics and Automation Letters},
+  year={2022},
+  publisher={IEEE}
+}
+
+@article{hindes2021critical,
+  title={Critical transition for colliding swarms},
+  author={Hindes, Jason and Edwards, Victoria and Hsieh, M Ani and Schwartz, Ira B},
+  journal={Physical Review E},
+  volume={103},
+  number={6},
+  pages={062602},
+  year={2021},
+  publisher={APS}
+}
+
+@article{wrightcrowd,
+  title={Crowd Polarization as Environmental Alignment Heuristic},
+  author={Wright, Ben and Edwards, Victoria}
 }
