--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,5 @@
 ---
 ---
-
 @article{edwards2020delay,
   title={Delay induced swarm pattern bifurcations in mixed reality experiments},
   author={Edwards, Victoria and deZonia, Philip and Hsieh, M Ani and Hindes, Jason and Triandaf, Ioana and Schwartz, Ira B},
@@ -139,4 +138,36 @@ project={stochastic_modeling},
   number={},
   pages={1-8},
   doi={10.1109/OCEANS47191.2022.9977236},
-  project={river}}
+  project={river}
+  }
+
+@article{silva2022DARS,
+  title={Proportional Control for Stochastic Regulation on Allocation of Multi-Robots},
+  author={Silva, Thales C and Edwards, Victoria and  Hsieh, M Ani},
+  journal={16th International Symposium on Distributed Autonomous Robotic Systems (DARS)},
+  year={2022},
+  publisher={Springer},
+selected={true},
+project={stochastic_modeling},
+}
+
+@article{edwards2023IROS,
+  title={On Collaborative Robot Teams for Environmental Monitoring: A Macroscopic Ensemble Approach},
+  author={Edwards, Victoria and Silva, Thales C and Mehta, Bharg and Dhanoa, Jasleen  and  Hsieh, M Ani},
+  journal={To appear in IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS) },
+  year={2023},
+  publisher={IEEE},
+selected={true},
+project={},
+}
+
+@article{edwards2024DARS,
+  title={A Macroscopic Ensemble Modeling Approach to Collaborative Task Assignment in Dynamic Environments},
+  author={Edwards, Victoria and Silva, Thales C and  Hsieh, M Ani},
+  journal={17th International Symposium on Distributed Autonomous Robotic Systems (DARS)},
+  year={2024},
+  publisher={Springer},
+selected={true},
+abstract={Monitoring a dynamic environment with robot teams requires continuously solving the multi-robot task allocation (MRTA) problem in response to environmental changes. The adaptive assignment of robots to different parts of the workspace as the environment changes makes this a Single-Task robots, Mulit-Robot tasks, and Time-extended Assignment (ST-MR-TA) problem.  Solutions to this problem can be classified as either macroscopic, where the assignment is obtained using a mean-field model of the team dynamics, or microscopic, where the assignment is posed as a resource allocation problem. While macroscopic techniques are scalable with team sizes and number of tasks, they lack expressiveness. On the other hand, microscopic techniques are more expressive, but often require expensive replanning when environmental conditions change.  In this work, we propose an alternative macroscopic formulation to the ST-MR-TA problem that results in a time-varying task assignment that can correspond to a changing environment. Our analysis of the macroscopic model uncovers parameter regimes where time-varying populations exist and further investigates the break down when the system is not well-mixed, i.e., when team sizes are small. Simulation validation shows that our proposed feedback control is necessary for small teams. },
+project={stochastic_modeling},
+}
