--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,6 @@
 ---
 ---
+
 @article{edwards2020delay,
   title={Delay induced swarm pattern bifurcations in mixed reality experiments},
   author={Edwards, Victoria and deZonia, Philip and Hsieh, M Ani and Hindes, Jason and Triandaf, Ioana and Schwartz, Ira B},
@@ -138,8 +139,8 @@ project={stochastic_modeling},
   number={},
   pages={1-8},
   doi={10.1109/OCEANS47191.2022.9977236},
-  project={river}
-  }
+  project={river}}
+
 
 @article{silva2022DARS,
   title={Proportional Control for Stochastic Regulation on Allocation of Multi-Robots},
@@ -147,7 +148,7 @@ project={stochastic_modeling},
   journal={16th International Symposium on Distributed Autonomous Robotic Systems (DARS)},
   year={2022},
   publisher={Springer},
-selected={true},
+selected={false},
 project={stochastic_modeling},
 }
 
@@ -157,8 +158,8 @@ project={stochastic_modeling},
   journal={To appear in IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS) },
   year={2023},
   publisher={IEEE},
-selected={true},
-project={},
+selected={false},
+project={stochastic_modeling},
 }
 
 @article{edwards2024DARS,
