--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -110,7 +110,7 @@ selected={true}
   journal={16th International Symposium on Distriubted Autonomous Robotic Systems (DARS)},
   year={2022},
   publisher={Springer},
-selected={true},
+selected={false},
 project={stochastic_modeling},
 }
 
@@ -155,10 +155,11 @@ project={stochastic_modeling},
 @article{edwards2023IROS,
   title={On Collaborative Robot Teams for Environmental Monitoring: A Macroscopic Ensemble Approach},
   author={Edwards, Victoria and Silva, Thales C and Mehta, Bharg and Dhanoa, Jasleen  and  Hsieh, M Ani},
-  journal={To appear in IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS) },
+  journal={In IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS) },
   year={2023},
   publisher={IEEE},
-selected={false},
+selected={true},
+abstract={With the rapidly changing climate and an increase in extreme weather events, it is necessary to have better methods to monitor and study the impacts of these phenomena on urban river environments. Multi-robot environmental monitoring has long focused on strategies that assign individual robots to distinct regions or task objectives. While these methods have seen success for Autonomous Surface Vehicles (ASVs), the spatial expanse and temporal variability of rivers impose an increased burden on existing techniques, necessitating computationally intensive replanning. Alternative methods aim to model and control teams of robots by prescribing global constraints on the system, using the insight that robots' transitions between tasks are stochastic and time-based. These methods do not require replanning because robots will perform different tasks achieving the overall desired system state, focusing on temporal switching alone limits their overall descriptive power. In this paper, we present a method that considers collaborations between robots to inform task switching based on spatial proximity. Our results suggest that in unknown environments macroscopic models provide increased flexibility for individual robot task execution as compared to coverage control methods. },
 project={stochastic_modeling},
 }
 
