updates to website

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -111,7 +111,7 @@ selected={true}
   year={2022},
   publisher={Springer},
 selected={false},
-project={stochastic_modeling},
+project={collaborative_macro},
 }
 
 @article{hindes2021critical,
@@ -149,7 +149,7 @@ project={stochastic_modeling},
   year={2022},
   publisher={Springer},
 selected={false},
-project={stochastic_modeling},
+project={adaptive_macro},
 }
 
 @article{edwards2023IROS,
@@ -160,7 +160,7 @@ project={stochastic_modeling},
   publisher={IEEE},
 selected={true},
 abstract={With the rapidly changing climate and an increase in extreme weather events, it is necessary to have better methods to monitor and study the impacts of these phenomena on urban river environments. Multi-robot environmental monitoring has long focused on strategies that assign individual robots to distinct regions or task objectives. While these methods have seen success for Autonomous Surface Vehicles (ASVs), the spatial expanse and temporal variability of rivers impose an increased burden on existing techniques, necessitating computationally intensive replanning. Alternative methods aim to model and control teams of robots by prescribing global constraints on the system, using the insight that robots' transitions between tasks are stochastic and time-based. These methods do not require replanning because robots will perform different tasks achieving the overall desired system state, focusing on temporal switching alone limits their overall descriptive power. In this paper, we present a method that considers collaborations between robots to inform task switching based on spatial proximity. Our results suggest that in unknown environments macroscopic models provide increased flexibility for individual robot task execution as compared to coverage control methods. },
-project={stochastic_modeling},
+project={collaborative_macro},
 }
 
 @article{edwards2024DARS,
@@ -171,5 +171,5 @@ project={stochastic_modeling},
   publisher={Springer},
 selected={true},
 abstract={Monitoring a dynamic environment with robot teams requires continuously solving the multi-robot task allocation (MRTA) problem in response to environmental changes. The adaptive assignment of robots to different parts of the workspace as the environment changes makes this a Single-Task robots, Mulit-Robot tasks, and Time-extended Assignment (ST-MR-TA) problem.  Solutions to this problem can be classified as either macroscopic, where the assignment is obtained using a mean-field model of the team dynamics, or microscopic, where the assignment is posed as a resource allocation problem. While macroscopic techniques are scalable with team sizes and number of tasks, they lack expressiveness. On the other hand, microscopic techniques are more expressive, but often require expensive replanning when environmental conditions change.  In this work, we propose an alternative macroscopic formulation to the ST-MR-TA problem that results in a time-varying task assignment that can correspond to a changing environment. Our analysis of the macroscopic model uncovers parameter regimes where time-varying populations exist and further investigates the break down when the system is not well-mixed, i.e., when team sizes are small. Simulation validation shows that our proposed feedback control is necessary for small teams. },
-project={stochastic_modeling},
+project={collaborative_macro},
 }
